--- a/src/common/Footer/Footer.css
+++ b/src/common/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footerDesign{
-    height: 15vh;
+    height: 10vh;
     max-width: 100vw;
-    background-color: white;
+    background-color: rgb(255, 0, 0);
 }
