--- a/src/common/InputText/InputText.css
+++ b/src/common/InputText/InputText.css
@@ -1,6 +1,6 @@
 .normalInput {
 
-    border-radius: 1em;
+    
     border: 0.2em solid grey;
     width: 15em;
     height: 2em;
@@ -14,3 +14,37 @@
     border: 0.2em solid red;
 
 }
+
+.styleSelect{
+    font-weight: 400;
+  color: #444;
+  line-height: 1.3;
+  padding: .4em 1.4em .3em .8em;
+  width: 400px;
+  max-width: 100%;
+  margin: 0.5em;
+  box-sizing: border-box;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+  border-radius: .3em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+}
+.styleSelect::-ms-expand {
+    display: none;
+  }
+  .styleSelect:hover {
+    border-color: #888;
+  }
+  .styleSelect:focus {
+    border-color: #aaa;
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222; 
+    outline: none;
+  }
+  .styleSelect option {
+    font-weight:normal;
+  }
