--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -28,3 +28,35 @@
     margin-top: 2em;
     
 }
+
+.registerErrorMessage{
+    color: red;
+    transition: 2s;
+}
+
+.inactiveButton{
+    background-color: red;
+    transition: 2s; 
+
+}
+.inactiveButton:active{
+    animation: shake 0.5s;
+}
+
+.registerTitle{
+    font-size: xx-large;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@keyframes shake {
+    0% { transform: translateX(0); }
+    10% { transform: translateX(-1em); }
+    20% { transform: translateX(1em); }
+    30% { transform: translateX(-1em); }
+    40% { transform: translateX(1em); }
+    50% { transform: translateX(-1em); }
+    60% { transform: translateX(1em); }
+    80% { transform: translateX(-1em); }
+    100% { transform: translateX(0); }
+}
+
