[FEAT] Added the UserLateralNavbar(V1) to all the roles.

--- a/src/common/ChangeViewButtonUserLateralNavbar/ChangeViewButtonUserLateralNavbar.css
+++ b/src/common/ChangeViewButtonUserLateralNavbar/ChangeViewButtonUserLateralNavbar.css
@@ -7,18 +7,37 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Urbanist', sans-serif; /* Utiliza la fuente 'Roboto' o la que desees */
-    font-weight: 400; /* Puedes ajustar el peso de la fuente según lo necesites */
-    font-size: 1em; /* Puedes ajustar el tamaño de la fuente según lo necesites */
-    color: black; /* Establece el color del texto a blanco o cualquier otro color claro */
+    font-family: 'Urbanist', sans-serif; 
+    font-weight: 400; 
+    font-size: 1em; 
+    color: black; 
     border: none;
-    border-radius: 5px; /* Puedes ajustar el radio del borde según lo necesites */
+    border-radius: 5px; 
     cursor: pointer;
-    transition: 0.3s ease; /* Agrega una transición suave al cambiar el color de fondo */
+    transition: 0.3s ease; 
     margin-top: 0.5em;
-    /* Agrega estilos adicionales si es necesario */
+    
 }
 
 .ChangeViewButtonUserLateralNavbar:hover {
-    color: #b5b5b5; /* Cambia el color de fondo al pasar el cursor sobre el botón */
+    color: #b5b5b5; 
 }
+
+@media screen and (max-width: 576px) {
+    .ChangeViewButtonUserLateralNavbar{
+        width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Urbanist', sans-serif;
+    font-weight: 400;
+    font-size: 0.7em;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-top: 0.5em;
+    }
+  }
