--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -3,6 +3,17 @@
     max-width: 100vw;
     background-color: #f8f9fa;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: start;
+}
+
+
+.lateralNavbar{
+    height: auto;
+    width: 25%;
+}
+
+.profileContent{
+    height: auto;
+    width: 75%;
 }
