[FEAT] Now at the profile the users will see all of his buys. Now we map the orders and we create BuyCards. For the moment the pictures are not available. In the future it will be!

--- a/src/common/BuyCard/BuyCard.css
+++ b/src/common/BuyCard/BuyCard.css
@@ -1,8 +1,9 @@
 .buyCardDesign{
     height: 19em;
     width: 100%;
-    background-color: blue;
     margin-bottom: 2em;
+    border: solid black 0.1em;
+    background-color: grey;
 }
 
 .buyDate{
