[UPDATE] Added updateUser at UserLateralNavbar in all roles. Changed the height, now is automaticly fits the content

--- a/src/common/UserLateralNavbar/UserLateralNavbar.css
+++ b/src/common/UserLateralNavbar/UserLateralNavbar.css
@@ -2,12 +2,13 @@
 
 .userLateralNavbarDesign{
     width: 19.8vw;
-    height: 70vh;
+    height: auto;
     border-radius: 0.4em;
     display: flex;
     overflow-y: auto;
     box-sizing: border-box;
     background-color: grey;
+    margin-bottom: 1em;
     
 }
 
