--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,4 +8,7 @@
     min-height: 100vh;
     max-width: 100vw;
     background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
