[FEAT] Tried to bring all of the softDeletes. For the moment is not working so its commented

--- a/src/pages/AllUsers/AllUsers.css
+++ b/src/pages/AllUsers/AllUsers.css
@@ -5,7 +5,7 @@
     background-color: #f8f9fa;
     display: flex;
     justify-content: center;
-    align-items: star;
+    align-items: start;
 }
 
 
