--- a/src/common/BuyCard/BuyCard.css
+++ b/src/common/BuyCard/BuyCard.css
@@ -1,5 +1,5 @@
 .buyCardDesign{
-    height: 19em;
+    height: fit-content;
     width: 100%;
     margin-bottom: 2em;
     border: solid black 0.1em;
@@ -38,9 +38,8 @@
 }
 
 .productPicture{
-    height: 8em;
-    width: 100%;
-    background-color: red;
+    height: fit-content;
+    width: 8em;
     margin-top: 0.5em;
     display: flex;
     justify-content: st;
@@ -59,5 +58,27 @@
     justify-content: end;
     margin-top: 0.5em;
 
+}
+
+.productReference{
+    height: auto;
+    width: auto;
+}
+.productName{
+    height: auto;
+    width: auto;
+}
+.productPrice{
+    height: auto;
+    width: auto;
+}
+
+.borderProduct{
+    border: solid black 0.1em;
+    border-radius: 0.2em;
+}
+
+.textBold{
+    font-weight: bolder;
 }
 
