--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,38 +1,60 @@
-.loginDesign{
-    min-height: 75vh;
-    max-width: 100vw;
-    background-color: #f8f9fa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@import url("https://fonts.googleapis.com/css2?family=Urbanist&display=swap");
+
+.loginDesign {
+  min-height: 75vh;
+  max-width: 100vw;
+  background-color: #f8f9fa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.rowLogin{
-    border: solid black 0.2em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 0;
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 4em;
-    padding-bottom: 4em;
-
+.rowLogin {
+  border-radius: 0.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.loginPhoto{
-    background-color: blue;
+.loginPhoto {
+  background-image: url(../../assets/jewelryLogo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 15em;
+  width: 15em;
 }
 
+.spaceLogin {
+  border-right: solid black 0.1em;
+}
 
-.botonLogin{
-    width: 6em;
-    height: 3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black ;
-    margin-top: 2em;
-    color: white;
-    cursor: pointer;
+.botonLogin {
+  width: 6em;
+  height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  margin-top: 2em;
+  color: white;
+  cursor: pointer;
+}
+
+.loginText {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+* {
+  font-size: medium;
+}
+
+@media screen and (max-width: 576px) {
+  .loginPhoto {
+    background-image: url(../../assets/jewelryLogo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 0em;
+    width: 0em;
+  }
 }
