--- a/src/common/BuyCard/BuyCard.css
+++ b/src/common/BuyCard/BuyCard.css
@@ -2,14 +2,12 @@
     height: fit-content;
     width: 100%;
     margin-bottom: 2em;
-    border: solid black 0.1em;
-    background-color: grey;
+    background-color: #d9dddb;
 }
 
 .buyDate{
     height: 2em;
     width: 100%;
-    background-color: yellow;
     margin-top: 0.5em;
     display: flex;
     justify-content: center;
@@ -19,7 +17,6 @@
 .statusBuy{
     height: 2em;
     width: 100%;
-    background-color: aqua;
     margin-top: 0.5em;
     display: flex;
     justify-content: center;
@@ -30,10 +27,9 @@
 .numberOfProducts{
     height: 2em;
     width: 100%;
-    background-color: aqua;
     margin-top: 0.5em;
     display: flex;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
 }
 
@@ -52,7 +48,6 @@
 .price{
     height: 3em;
     width: 100%;
-    background-color: aqua;
     display: flex;
     align-items: center;
     justify-content: end;
@@ -76,9 +71,14 @@
 .borderProduct{
     border: solid black 0.1em;
     border-radius: 0.2em;
+    background-color:white ;
 }
 
 .textBold{
     font-weight: bolder;
+}
+
+.textSize{
+    font-size: larger;
 }
 
