--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -22,3 +22,11 @@
     margin-right: 1em;
     cursor: pointer;
 }
+
+.cartButton{
+    height: 1em;
+    width: 1em;
+    background-image: url(../../assets/cartIcon.png);
+    background-size: cover;
+    cursor: pointer
+}
