--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,10 +5,42 @@
 }
 
 .homeDesign{
-    min-height: 100vh;
+    min-height: 75vh;
     max-width: 100vw;
-    background-color: red;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f8f9fa;
+
 }
+
+
+
+.bigPicture{
+
+    width: 80vw;
+    height: 50vh;
+}
+
+.homeCard{
+    background-color: #d8d8d8;
+    width: fit-content;
+    cursor: pointer;
+}
+.smallImage{
+    width: 30vw;
+    height: 40vh;
+}
+
+@media screen and (max-width: 576px) {
+    .bigPicture{
+
+        width: 80vw;
+        height: 25vh;
+    }
+
+    .smallImage{
+        width: 30vw;
+        height: 20vh;
+    }
+  }
