--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,6 +21,8 @@
     width: 80vw;
     height: 50vh;
     background-image: url(../../assets/home1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .homeCard{
@@ -32,11 +34,15 @@
     width: 30vw;
     height: 40vh;
     background-image: url(../../assets/home2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .smallImage2{
     width: 30vw;
     height: 40vh;
     background-image: url(../../assets/home3.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 576px) {
