[UPDATE] Adjusted the responsive in header and in BuyCard common to fit in the design

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -49,13 +49,16 @@
   font-size: medium;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 992px) {
   .loginPhoto {
     background-image: url(../../assets/jewelryLogo.png);
     background-size: contain;
     background-repeat: no-repeat;
     height: 0em;
     width: 0em;
+  }
+  .spaceLogin {
+    border-right: solid black 0em;
   }
 }
 
