--- a/src/common/Header/Header.css
+++ b/src/common/Header/Header.css
@@ -30,3 +30,10 @@
     background-size: cover;
     cursor: pointer
 }
+
+.quantityDisplay{
+    width: 1em;
+    height: 1em;
+    background-color: black;
+    border-radius: 50%;
+}
