[UPDATE] Updated the logic of showing error messages to the users

--- a/src/pages/AllProducts/AllProducts.css
+++ b/src/pages/AllProducts/AllProducts.css
@@ -3,7 +3,7 @@
     min-height: 75vh;
     background-color: #f8f9fa;
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: center;
 }
 
