--- a/src/pages/OrdersToPrepare/OrdersToPrepare.css
+++ b/src/pages/OrdersToPrepare/OrdersToPrepare.css
@@ -3,6 +3,13 @@
     max-width: 100vw;
     background-color: #f8f9fa;
     display: flex;
-    justify-content: space-between;
     align-items: start;
+}
+
+.contentOrdersToPrepare{
+    max-width: 75%;
+}
+
+.lateralNavbarOrdersToPrepare{
+    max-width: 24%;
 }
