--- a/src/pages/RestoreUserAccount/RestoreUserAccount.css
+++ b/src/pages/RestoreUserAccount/RestoreUserAccount.css
@@ -10,7 +10,6 @@
 .restoreUserAccountForm{
     height: fit-content;
     width: fit-content;
-    background-color: aqua;
 }
 
 .sureButton{
@@ -19,7 +18,7 @@
 
 }
 
-.returnButton{
+.returnButtonRestore{
     background-color: red;
     cursor: pointer;
 
@@ -27,4 +26,9 @@
 
 .fontWeight{
     font-weight: bolder;
+}
+
+.nameAndSurnameRestoreUserAccount{
+    display: flex;
+    flex-wrap: wrap;
 }
